Fix 'fixed' cooldowns

--- a/classes/heinrich/skills/index.html
+++ b/classes/heinrich/skills/index.html
@@ -405,7 +405,7 @@
                     </tr>
                     <tr>
                         <td class="column_name">Cooldown:</td>
-                        <td class="column_value">8s (reducible)</td>
+                        <td class="column_value">8s (fixed)</td>
                         <td class="column_name">Delay:</td>
                         <td class="column_value">1s</td>
                         <td colspan="2" />
@@ -731,7 +731,7 @@
                     </tr>
                     <tr>
                         <td class="column_name">Cooldown:</td>
-                        <td class="column_value">15s (reducible)</td>
+                        <td class="column_value">15s (fixed)</td>
                         <td class="column_name">Delay:</td>
                         <td class="column_value">1s</td>
                         <td colspan="2" />
