Specify white barrier does not get blocked

--- a/classes/heinrich/skills/index.html
+++ b/classes/heinrich/skills/index.html
@@ -697,7 +697,7 @@
                     </tr>
                     
                     <tr>
-                        <td colspan="5" class="column_value">Does not disable HP relic, Rathgricy's HP Feather block, soul breath, asphyxia, physical damage immunity like Rathgricy's heroic passive lv4, magical damage immunity like Rathgricy's heroic passive lv4 and Jormungandr's T5 weapon effect, physical barrier void affix, magical barrier void affix, channel-switching mvp penalty, etc</td>
+                        <td colspan="5" class="column_value">Does not disable HP relic, Rathgricy's HP Feather block, soul breath, asphyxia, white barrier, physical damage immunity like Rathgricy's heroic passive lv4, magical damage immunity like Rathgricy's heroic passive lv4 and Jormungandr's T5 weapon effect, physical barrier void affix, magical barrier void affix, channel-switching mvp penalty, etc</td>
                     </tr>
                     
                     <tr>
