Update moon chaser to monthly

--- a/classes/heinrich/skills/index.html
+++ b/classes/heinrich/skills/index.html
@@ -1023,9 +1023,9 @@
                     
                     <tr>
                         <td rowspan="2" class="column_name">
-                            <img src="moon-chaser.png" class="image_icon"></img>
+                            <img src="monthly.png" class="image_icon"></img>
                         </td>
-                        <td colspan="4" rowspan="2" class="column_name" style="width: 80%;">Moon Chaser</td>
+                        <td colspan="4" rowspan="2" class="column_name" style="width: 80%;">Monthly</td>
                         <td rowspan="2" class="column_name">Passive</td>
                     </tr>
                     <tr />
